# dnd-agent-builder

./: .dockerignore  .env.example  .gitignore  AGENT_ROUTER_USAGE_EXAMPLE.md  CHAT_IMPLEMENTATION_SUMMARY.md  Dockerfile  Makefile  README.md  agent_spec.yml  docker-compose.dev.yml  pyproject.toml  todo.md
src/: agent.py  main.py
src/agents/utils/: sessions.py
src/api/: main.py
src/api/routers/: agent_router.py  chat.py  chat_storage.py
src/api/utils/: agent_router.py  logging.py  session_utils.py
src/chat_orchestrator/: agent.py
src/core/: config.py  database.py  logging.py  stack_auth.py
src/crud/: chat.py
src/deep_research_agent/: agent.py  config.py  mcp.py  models.py  tools.py
src/deep_research_agent/agents/: supervisor_agent.py
src/dependencies/: __init__.py  auth.py  database.py
src/executor_agent/: __init__.py  agent.py  context.py  main.py  mcp.py  models.py
src/executor_agent/subagents/code_generator/: __init__.py  agent.py
src/executor_agent/subagents/code_validator/: __init__.py  agent.py
src/executor_agent/subagents/requirement_analyzer/: __init__.py  agent.py
src/models/: __init__.py  chat.py
src/planner_agent/: __init__.py  agent.py  supervisor_prompt.py
src/planner_agent/subagents/: prompt.py
src/planner_agent/subagents/agent_tool_workflow_designer/: __init__.py  agent.py
src/planner_agent/subagents/intent_analyzer/: agent.py  intent_prompt.py
src/planner_agent/subagents/knowledge_retrieval/: __init__.py  agent.py  knowledge_retrieval_prompt.py
src/schemas/: chat.py
(+2 files in other folders)
