[project]
name = "agentweaver-oai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "galileo>=1.7.0",
    "openai-agents>=0.1.0",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.9",
    "uvicorn>=0.35.0",
]
